# ylang

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: 00-project.mdc  10-core-protected.mdc  20-style.mdc  30-git-session-end.mdc
.github/workflows/: ci.yml  llm-e2e.yml
deploy/: setup-cli-access.sh  setup-data-dir.sh  ylang-cli  ylang.models.json  ylang.service
deploy/cursor/: hooks.json  ylang-auto-improve.mdc
deploy/cursor/hooks/: ylang-allow-mcp.sh  ylang-improve-prompt.py  ylang-session-start.py
docs/: README.md  architecture.md  audit-and-roadmap.md  backlog-shipped.md  backlog.md  configuration.md  cursor-integration.md  database-schema.md  dead-code.md  deployment.md  development.md  gateway.md  installation.md  mcp-tools.md
scripts/: e2e_improve_prompt.py  gateway_load_test.py  import-public-prompts.sh  populate-public-prompts-via-mcp.py
src/ylang/: __init__.py  __main__.py  settings.py
src/ylang/cli/: __init__.py  ops.py  patterns.py  usage.py
src/ylang/core/: __init__.py  db.py  (+8 more)
tests/: conftest.py  helpers.py  test_async_store.py  test_auth.py  test_block_assembler.py  test_budget_integration.py  test_cli_ops.py  test_cli_patterns.py  test_cli_usage.py  test_cursor_mode.py  test_db.py  test_engine.py  test_engine_stream.py  test_gateway_face.py  test_gateway_load_test.py  test_gateway_mapping.py  test_gateway_openai.py  test_gateway_routes.py  test_gateway_stream_tools.py  test_gateway_tools.py  test_health_route.py  test_hook_improve_prompt.py  test_importer.py  test_improver_analytics.py  test_improver_context.py  test_improver_parse.py  test_improver_reference.py  test_improver_validate.py  test_library_retrieval.py  test_library_search.py  test_library_visibility.py  test_migrations.py  test_mode_optimizer.py  test_model_router.py  test_parallelism.py  test_pattern_detector.py  test_task_class.py  test_usage_activity.py  test_usage_aggregates_cache.py  test_usage_dashboard.py  (+1 more)
tests/fixtures/: sample_prompts.csv
tests/integration/: test_improve_prompt_e2e.py  test_llm_e2e.py  test_mcp_tools.py
(+35 files in other folders)
