[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ylang"
version = "0.1.0"
description = "Personal AI efficiency layer — MCP server (Phase 1)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27,<2",
    "litellm",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
ylang = "ylang.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ylang"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
